# odoo-bringout-l10n_ba_product_dental

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
l10n_ba_product_dental/: __manifest__.py
l10n_ba_product_dental/models/: __init__.py  account_move_line.py  product_product.py  product_template.py  sale_order_line.py
l10n_ba_product_dental/views/: product_dental_ba.xml
